[package]
edition.workspace = true
license.workspace = true
name = "templar-market-contract"
repository.workspace = true
version = "1.4.0"

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.17.0-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:1784ca6310f3496f0048356ce420921c8f5fdf71ee8124d43a2e1ceb1f70db8a"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
getrandom.workspace = true
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
near-contract-standards.workspace = true
templar-common.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
rstest.workspace = true
test-utils.workspace = true
tokio.workspace = true
templar-relayer = { path = "../../service/relayer" }

[lints]
workspace = true

[[example]]
name = "gas_report"

[[example]]
name = "receipt_gas"
