[package]
name = "templar-4626-proxy-soroban"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stub Soroban ERC-4626 proxy contract for Templar Protocol"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
doctest = false

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "25.0.1", features = ["alloc"] }
templar-soroban-shared-types = { path = "../vault/soroban/shared-types" }
templar-vault-kernel = { path = "../vault/kernel", features = ["postcard", "soroban"] }
templar-curator-primitives = { path = "../vault/curator-primitives", features = ["postcard"] }

[dev-dependencies]
soroban-sdk = { version = "25.0.1", features = ["testutils", "alloc"] }
templar-soroban-governance = { path = "../vault/soroban/governance" }
templar-soroban-runtime = { path = "../vault/soroban", features = ["testutils"] }
