[package]
edition = "2021"
name = "redstone-adapter"
publish = false
version = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
agnostic-tests = []

[dependencies]
hex-literal = "1.0.0"
k256 = { workspace = true, default-features = true, features = ["ecdsa", "sha256"] }
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
redstone = { workspace = true, default-features = false, features = [] }
templar-common.workspace = true
primitive-types.workspace = true

[dev-dependencies]
hex.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage", "unit-testing"] }
redstone = { workspace = true, default-features = false, features = ["std"] }
rstest.workspace = true
