[package]
edition.workspace = true
license.workspace = true
name = "templar-vault-counterparty-contract"
repository.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
