[package]
edition.workspace = true
license.workspace = true
name = "templar-vault-contract"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.4-rust-1.85.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:a9d8bee7b134856cc8baa142494a177f2ba9ecfededfcdd38f634e14cca8aae2"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
getrandom.workspace = true
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
near-contract-standards.workspace = true
templar-common.workspace = true
itertools.workspace = true
primitive-types = { version = "0.14.0", features = ["serde"] }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
rstest.workspace = true
test-utils.workspace = true
tokio.workspace = true
templar-relayer = { path = "../../service/relayer" }
rand = "0.8"
proptest = "*"
futures.workspace = true

[lints]
workspace = true

# [[example]]
# name = "receipt_gas"
