[package]
name = "templar-gateway-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
templar-gateway-methods-spec.workspace = true
templar-gateway-oracle-updates-spec.workspace = true
templar-gateway-types.workspace = true

[lints]
workspace = true
