[package]
name = "templar-gateway-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
near-api.workspace = true
url.workspace = true
templar-gateway-core.workspace = true
templar-gateway-methods-dispatch.workspace = true
templar-gateway-store.workspace = true
templar-gateway-types.workspace = true

[features]
# Derive `clap::ValueEnum` on `Network` so CLI consumers can use it directly.
clap = ["dep:clap"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
