[package]
name = "blockchain-gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
near-openapi-types.workspace = true
near-account-id = { workspace = true, features = ["serde", "schemars"] }
near-gas = { workspace = true, features = ["serde", "schemars"] }
near-token.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
templar-common = { workspace = true, features = ["abi"] }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
