[package]
name = "blockchain-gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
blockchain-gateway-macros = { path = "../macros" }
borsh.workspace = true
near-api-types = "0.8.5"
near-openapi-types.workspace = true
near-account-id = { workspace = true, features = ["serde", "schemars"] }
near-gas = { workspace = true, features = ["serde", "schemars"] }
near-sdk = { workspace = true, default-features = false, features = ["non-contract-usage"] }
near-token.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
templar-common = { workspace = true, features = ["abi", "non-contract-usage"] }
templar-universal-account.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
