[package]
name = "templar-gateway-methods-spec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
near-account-id = { workspace = true, features = ["serde", "schemars"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-gateway-macros.workspace = true
templar-gateway-types.workspace = true
templar-universal-account.workspace = true

[lints]
workspace = true
