[package]
name = "blockchain-gateway-near"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix.workspace = true
async-trait.workspace = true
blockchain-gateway-core = { path = "../core" }
futures.workspace = true
hex.workspace = true
near-api.workspace = true
near-account-id = { version = "2.6.0", features = ["serde", "schemars"] }
near-contract-standards.workspace = true
near-sdk.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
templar-common = { workspace = true, features = ["abi"] }
templar-redstone-bridge.workspace = true
templar-universal-account.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
