[package]
name = "templar-gateway-near"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
near-api.workspace = true
near-openapi-client.workspace = true
near-account-id = { version = "2.6.0", features = ["serde", "schemars"] }
near-contract-standards.workspace = true
near-sdk = { workspace = true, default-features = false, features = ["non-contract-usage"] }
moka.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = "0.3.2"
sha2.workspace = true
sqlx.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-gateway-types.workspace = true
templar-redstone-bridge.workspace = true
templar-universal-account.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
near-sandbox = "0.3.9"
near-token.workspace = true
test-utils.workspace = true
