[package]
name = "templar-gateway-oracle-pyth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-gateway-types.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
