[package]
name = "templar-gateway-oracle-redstone"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-gateway-core.workspace = true
templar-redstone-bridge.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
