[package]
name = "templar-gateway-oracle-updates-spec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
near-account-id.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-gateway-macros.workspace = true
templar-gateway-types.workspace = true
templar-universal-account.workspace = true

[lints]
workspace = true
